Set up very base html

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,19 @@
-<p>This is the partial for view 1.</p>
+<div class="container-fluid" ng-controller="AppCtrl1">
+    <ul class="col-md-8">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>DataType2</th>
+                    <th>DataType3</th>
+                    <th>DataType4</th>
+                    <th>DataType5</th>
+                </tr>
+            </thead>
+
+            <tbody>
+            <tr><td>data1</td></tr>
+            <tr><td>data2</td></tr>
+            </tbody>
+        </table>
+    </ul>
+</div>
