Updated the layout

--- a/app/index.html
+++ b/app/index.html
@@ -15,15 +15,20 @@
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
+
 <div class="container-fluid">
-    <ul class="col-md-3">
-        <table class="table table-bordered table-hover">
-            <tbody>
-                <tr><td><a href="#/view1">view1</a></td></tr>
-                <tr><td><a href="#/view2">view2</a></td></tr>
-            </tbody>
-        </table>
-    </ul>
+    <nav class="navbar navbar-default">
+        <!--
+            <table class="table table-bordered table-hover">
+                <tbody>
+                    <tr><td><a href="#/view1">view1</a></td></tr>
+                    <tr><td><a href="#/view2">view2</a></td></tr>
+                </tbody>
+            </table>
+        -->
+        <div class="col-md-6"><h1 class="text-center"><a href="#/view1">Browse Houses</a></h1></div>
+        <div class="col-md-6"><h1 class="text-center"><a href="#/view2">Display Energy Consumption</a></h1></div>
+    </nav>
 
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
