Can know select a house

--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,11 @@
 
 <div class="container-fluid">
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
         <h1 class="text-center" style="color: #00b3ee">Smart Energy App</h1>
     </nav>
 
     <div class="col-md-3">
-
         <nav id="left_navigation" class="navbar-text navbar-left">
             <table class="table table-bordered table-hover">
                 <tbody>
@@ -32,8 +31,13 @@
                 </tbody>
             </table>
         </nav>
-
+        <label class="navbar-text">Selected house: {{testvar}}</label>
     </div>
+
+
+
+
+
 
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
