Figured out how to manipulate points on graph

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
             <table class="table table-bordered table-hover">
                 <tbody>
                     <tr><td><h3 class="text-center"><a href="#/view1">Browse Houses</a></h3></td></tr>
-                    <tr><td><h3 class="text-center"><a href="#/view2">Display Energy Consumption</a></h3></td></tr>
+                    <tr><td><h3 class="text-center"><a href="#/view2">Monitor Energy Consumption</a></h3></td></tr>
                 </tbody>
             </table>
         </nav>
