--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -3,18 +3,20 @@
         <table class="table table-hover text-center" >
             <thead>
                 <tr>
+                    <th class="text-center">Day</th>
                     <th class="text-center">Water Consumption</th>
                     <th class="text-center">Electricity Consumption</th>
                 </tr>
             </thead>
 
             <tbody>
-            <tr ng-repeat="data in dataset">
-                <td>{{data.Water_Consumption}}</td>
-                <td>{{data.Electricity_Consumption}}</td>
-            </tr>
+                <tr ng-repeat="data in dataset" ng-click="updateChart($index)">
+                    <td>{{$index + 1}}</td>
+                    <td>{{data.Water_Consumption}}</td>
+                    <td>{{data.Electricity_Consumption}}</td>
+                </tr>
             </tbody>
-            
+
         </table>
 
 
