Can now update and normalize data in DB

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                 </tbody>
             </table>
         </nav>
-        <label class="navbar-text">Selected house: {{testvar}}</label>
+        <label class="navbar-text">Selected house: {{g_home_address.WEL_Address}} {{g_home_address.Postal_Code}}</label>
     </div>
 
 
