Updated the chart

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -24,7 +24,7 @@
 
         <canvas id="line" class="chart chart-line" chart-data="data"
                 chart-labels="labels" chart-legend="true" chart-series="series"
-                chart-click="onClick" >
+                chart-click="onClick" chart-load="onLoad" >
         </canvas>
     </div>
 </div>
