--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -3,20 +3,13 @@
         <table class="table table-hover text-center" >
             <thead>
                 <tr>
-                    <th class="text-center">Months Passed</th>
+                    <th class="text-center">Month</th>
                     <th class="text-center">Electricity Cost ($)</th>
                     <th class="text-center">Electricity Consumption (Kw)</th>
                 </tr>
             </thead>
 
             <tbody id="real_time_energy_consumption">
-                <!--<tr id="real_time_energy_consumption0">-->
-                <!--<tr ng-repeat="data in dataset" ng-click="loadChart($index)">-->
-                    <!--&lt;!&ndash;<td>{{$index + 1}}</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td>{{data.Water_Consumption}}</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td>{{data.Electricity_Consumption}}</td>&ndash;&gt;-->
-                <!--</tr>-->
-                <!--</tr>-->
             </tbody>
 
         </table>
