--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -4,8 +4,8 @@
             <thead>
                 <tr>
                     <th class="text-center">Month</th>
-                    <th class="text-center">Electricity Cost ($)</th>
-                    <th class="text-center">Electricity Consumption (Kw)</th>
+                    <th class="text-center">Electricity Cost ($/Month)</th>
+                    <th class="text-center">Electricity Consumption (kW/Month)</th>
                 </tr>
             </thead>
 
