--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <div class="container-fluid">
 
     <nav class="navbar navbar-inverse">
-        <h1 class="text-center" style="color: #00b3ee">Smart Energy App</h1>
+        <h1 class="text-center" style="color: #00b3ee">Energy Monitoring Tool</h1>
     </nav>
 
     <div class="col-md-3">
